# atcoder-python-docker

./: .dockerignore  Dockerfile  README.md  config.fish  pyproject.toml  requirements.txt  requirements_arm64.txt  requirements_cpy.txt
.github/workflows/: docker.yml
config_pypy/: requirements_arm64.txt
docker_cpython/: Dockerfile
docker_pypy/: Dockerfile
scripts/: atc.py  submit.py
