[tool.poetry]
name = "atcoder-python-docker"
version = "0.1.0"
description = "Atcoder用Python Docker環境"
authors = ["liebe-magi <liebe.magi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "1.24.1"
scipy = "1.10.1"
networkx = "3.0"
sympy = "1.11.1"
sortedcontainers = "2.4.0"
more-itertools = "9.0.0"
shapely = "2.0.0"
bitarray = "2.6.2"
pulp = "2.7.0"
mpmath = "1.2.1"
pandas = "1.5.2"
z3-solver = "4.12.1.0"
scikit-learn = "1.3.0"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}
cppyy = "2.4.1"

[tool.poe.tasks]
    [tool.poe.tasks.new]
    help = "Generate new contest directory"
    cmd = "acc new -d contents/{ContestID}"
    [tool.poe.tasks.n]
    help = "Generate new contest directory"
    cmd = "acc new -d contents/{ContestID}"
    [tool.poe.tasks.test]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d contents/${contestID}/${taskID}/tests -c \"python contents/${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.t]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d contents/${contestID}/${taskID}/tests -c \"python contents/${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.submit]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true},
        { name = "interpreter", positional = true, required = true, default="pypy"},
    ]
    cmd = "python scripts/submit.py ${contestID} ${taskID} ${interpreter}"
    [tool.poe.tasks.s]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true},
        { name = "interpreter", positional = true, required = true, default="pypy"},
    ]
    cmd = "python scripts/submit.py ${contestID} ${taskID} ${interpreter}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
