[tool.poetry]
name = "atcoder-python-docker"
version = "0.2.0"
description = "Atcoder用Python Docker環境"
authors = ["liebe-magi <liebe.magi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"

[tool.poe.tasks]
    [tool.poe.tasks.new]
    help = "Generate new contest directory"
    cmd = "acc new -d contents/{ContestID}"
    [tool.poe.tasks.n]
    help = "Generate new contest directory"
    cmd = "acc new -d contents/{ContestID}"
    [tool.poe.tasks.test]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d contents/${contestID}/${taskID}/tests -c \"python contents/${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.t]
    help = "Run test cases"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true}
    ]
    cmd = "oj test -d contents/${contestID}/${taskID}/tests -c \"python contents/${contestID}/${taskID}/main.py\""
    [tool.poe.tasks.submit]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true},
        { name = "interpreter", positional = true, default="pypy"},
    ]
    cmd = "python scripts/submit.py ${contestID} ${taskID} ${interpreter}"
    [tool.poe.tasks.s]
    help = "Submit to AtCoder"
    args = [
        { name = "contestID", positional = true, required = true},
        { name = "taskID", positional = true, required = true},
        { name = "interpreter", positional = true, default="pypy"},
    ]
    cmd = "python scripts/submit.py ${contestID} ${taskID} ${interpreter}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
